# VLCPlayer

./: CMakeLists.txt  README.md  player.cpp  player.h
vlc40/sdk/lib/: libvlc.lib  libvlccore.lib
